tests/bad/bad_fmt.glaz
struct X {
	a: i32
}

fn main() {
	let p = "";
	_ = fmt!(p);
	_ = fmt!("");
	_ = fmt!("{}, {}", 1, 2, 3);
}
